--- a/index.html
+++ b/index.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
     <title>MarioBros_CharacterBuild</title>
 </head>
 <body>
-    
+    <header>
+        <h1 class="hidden">All About Super Mario Brothers</h1>
+        <img src="images/Mario_Logo.svg" alt="Super Mario Logo" id="main-logo">
+    </header>
+
+    <main>
+        <nav id="characters_nav">
+            <ul class="characters">
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Mario"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Mario</h5>
+                    </a>
+                    <!--<img src="images/Mario.jpg" alt="Mario">-->
+                </li>
+
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Luigi"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Luigi</h5>
+                    </a>
+                    <!--<img src="images/Luigi.jpg" alt="Luigi">-->
+                </li>
+
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Peach"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Peach</h5>
+                    </a>
+                    <!--<img src="images/Peach.jpg" alt="Peach">-->
+                </li>
+
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Toad"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Toad</h5>
+                    </a>
+                    <!--<img src="images/Toad.jpg" alt="Toad">-->
+                </li>
+
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Bowser"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Bowser</h5>
+                    </a>
+                    <!--<img src="images/Bowser.jpg" alt="Bowser">-->
+                </li>
+
+                <li>
+                    <a href="#lightbox">
+                        <div class="sprite" id="Yoshi"></div>
+                        <div class="red_bumper"></div>
+                        <h5>Yoshi</h5>
+                    </a>
+                    <!--<img src="images/Yoshi.jpg" alt="Yoshi">-->
+                </li>
+            </ul>
+        </nav>
+        <article>
+            <h3>Choose Your Favorite Character!</h3>
+            <p>Use your mouse to hover / click to discover more about each Mario Bros Character</p>
+        </article>
+    </main>
+    <footer class="sticky_footer">
+        <h3>All Images &copy; Nintendo</h3>
+    </footer>
 </body>
 </html>
