--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <nav id="characters_nav">
+        <nav id="character_nav">
             <ul class="characters">
                 <li>
                     <a href="#lightbox">
@@ -26,7 +26,7 @@
                 </li>
 
                 <li>
-                    <a href="#lightbox">
+                    <a href="#lightbox2">
                         <div class="sprite" id="Luigi"></div>
                         <div class="red_bumper"></div>
                         <h5>Luigi</h5>
@@ -71,13 +71,55 @@
                 </li>
             </ul>
         </nav>
+
         <article>
             <h3>Choose Your Favorite Character!</h3>
-            <p>Use your mouse to hover / click to discover more about each Mario Bros Character</p>
+            <p>Use your mouse to hover / click to discover more about each Super Mario Bros Character</p>
         </article>
     </main>
+
     <footer class="sticky_footer">
         <h3>All Images &copy; Nintendo</h3>
     </footer>
+
+    <!-- lightbox  -->
+    <section class="lightbox" id="lightbox">
+        <a href="" class="lightbox_close">X</a>
+
+        <article>
+            <h3 class="lb_heading">Mario - The Main Hero</h3>
+
+            <p class="lb_text">
+                The main hero of the Mushroom Kingdom. Mario is always bright and cheerful and instantly recognizable with his blue overalls, red cap, and trademark moustache.</p>
+
+            <p class="lb_text">
+                He's a trusted friend of Princess Peach, and he and his brother Luigi are known across the land for their acts of bravery.
+                Mario excels at sports including tennis, golf, baseball, soccer, and even kart racing.
+            </p>
+
+            <p class="lb_text">
+                He's good at all of them! He's a plumber by profession but is really a jack of all trades.
+                He uses his masterful jumping ability and a variety of power-ups to take on his archrival, Bowser.
+            </p>
+        </article>
+    </section>
+
+    <section class="lightbox" id="lightbox2">
+        <a href="" class="lightbox_close">X</a>
+
+        <article>
+            <h3 class="lb_heading">Luigi - Mario's Brother</h3>
+
+            <p class="lb_text">
+                Fellow hero of the Mushroom Kingdom. Luigi is instantly recognizable in his trademark green hat and green shirt.
+                <br>
+                Luigi is kind but can be a bit nervous, especially around ghosts. However, his abilities are on par with Mario's, so when these brothers team up, there's nothing they can't achieve.
+            </p>
+
+            <p class="lb_text">
+                Luigi is taller and can jump higher than Mario. If you look closely, you may also notice that the shape of his moustache is a bit different as well.
+            </p>
+        </article>
+    </section>
 </body>
 </html>
