--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </nav>
 
         <article>
-            <h3>Choose Your Favorite Character!</h3>
+            <h3>Select Your Favorite Player!</h3>
             <p>Use your mouse to hover / click to discover more about each Super Mario Bros Character</p>
         </article>
     </main>
